# cpp-reflection-sql

./: CMakeLists.txt
app/: main.cpp
models/: product.entity.hpp
scanner/: CMakeLists.txt
scanner/enum/: var.hpp
scanner/include/: field.hpp  scanner.hpp  table.hpp
scanner/src/: field.cpp  scanner.cpp  table.cpp
schema/include/: field.hpp
schema/src/: field.cpp
sql/include/: dep.hpp  sql_builder.hpp
sql/src/: sql_builder.cpp
utils/include/: sql.hpp
